layouts/songsheet.css
/*
  ChurchSuite Plan Viewer
  Copyright (C) 2025 Richard Huss

  This program is free software: you can redistribute it and/or modify it
  under the terms of the GNU General Public License as published by the Free
  Software Foundation, either version 3 of the License, or (at your option)
  any later version.

  This program is distributed in the hope that it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of  MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  more details.

  You should have received a copy of the GNU General Public License along with
  this program.  If not, see <http://www.gnu.org/licenses/>.
*/

#header {
    page-break-after: avoid;
}

h3 + div.song {
    page-break-before: avoid;
}

h3, h4 {
    page-break-after: avoid;
}

h2 {
    font-size: 1.4rem;
}

h3 {
    margin-top: 2rem;
    font-size: 1.3rem;
}

h4 {
    margin-left: 0.75rem;
    font-size: 1.1rem;
}

div.song p.stanza {
    page-break-inside: avoid;
    margin-left: 1.5rem;
    font-family: Georgia, \"Times New Roman\", serif;
    line-height: 1.2;
    /*font-size: 1.4rem;*/
}

p.songCredits {
    page-break-before: avoid;
    margin-left: 1.5rem;
    font-size: 0.6rem;
    font-style: italic;
}

